src/test/deca/syntax/invalid/lex/chaine_incomplete.deca
// @expected_output deca:3:0:

"chaine pas finie
